--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,4 @@
 
-.toggle {
-  margin-left: 20px;
-  margin-right: 20px;
-}
 
 .button {
   border-radius: 50% !important;
@@ -21,18 +17,7 @@
   position: absolute;
   font-family: 'Original Surfer', cursive;
   margin-left: 83px;
-  margin-top: 202px;
-}
-
-.text1 {
-  position: absolute;
-  font-family: 'Original Surfer', cursive;
-  margin-left: 19px;
-  margin-top: 142px;
-}
-
-.text1 span:last-child {
-  padding-left: 70px;
+  margin-top: 192px;
 }
 
 #title {
@@ -41,6 +26,7 @@
   font-size: 30px;
   margin-left: 35px;
   margin-top: 40px;
+  color: black;
 }
 
 #turn {
@@ -48,11 +34,11 @@
   background: #330000;
   color: red;
   font-family: courier;
-  font-size: 20px;
+  font-size: 18px;
   height: 30px;
-  width: 50px;
-  margin-left: 90px;
-  margin-top: 170px;
+  width: 120px;
+  margin-left: 55px;
+  margin-top: 160px;
   text-align: center;
   vertical-align: middle;
   line-height: 30px;
@@ -65,7 +51,7 @@
   width: 500px;
   position: relative;
   border-style: solid;
-  border-width: 10px;
+  border-width: 15px;
   margin: auto;
   margin-top: 60px;
   box-shadow: 8px 8px 15px 5px #888888;
@@ -145,7 +131,7 @@
 
 #inner-circle {
   position: absolute;
-  background: grey;
+  background: lightgray;
   border-radius: 50%;
   height: 250px;
   width: 250px;
