more of the same

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,12 @@
 
 
 .button {
-  border-radius: 50% !important;
-  font-size: 2em;
+  border-radius: 40% !important;
+  font-size: 32px;
   margin-left: 45px;
+  border-style:solid;
+  border-color: black;
+  border-width: 2px;
 }
 
 #switches {
