--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
   margin-top: 100px;
 }
 
-.text2 {
+.display {
   position: absolute;
   font-family: 'Original Surfer', cursive;
   margin-left: 83px;
