--- a/css/style.css
+++ b/css/style.css
@@ -53,8 +53,8 @@
   width: 500px;
   position: relative;
   border-style: solid;
-  border-width: 12px;
-  margin: auto;
+  border-width: 8px;
+  margin: 0 auto;
   margin-top: 60px;
 }
 
@@ -137,7 +137,7 @@
   height: 250px;
   width: 250px;
   border-style: solid;
-  border-width: 10px;
+  border-width: 8px;
   top: 50%;
   left: 50%;
   margin: -125px 0px 0px -125px;
