--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
   margin-top: 100px;
 }
 
-.display {
+#display {
   position: absolute;
   font-family: 'Original Surfer', cursive;
   margin-left: 90px;
