--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@
   margin-top: 60px;
 }
 
-#topleft {
+#green {
   position: absolute;
   height: 250px;
   width: 250px;
@@ -73,7 +73,7 @@
   -webkit-box-sizing: border-box;
 }
 
-#topright {
+#red {
   position: absolute;
   height: 250px;
   width: 250px;
@@ -91,7 +91,7 @@
   -webkit-box-sizing: border-box;
 }
 
-#bottomleft {
+#yellow {
   position: absolute;
   height: 250px;
   width: 250px;
@@ -109,7 +109,7 @@
   -webkit-box-sizing: border-box;
 }
 
-#bottomright {
+#blue {
   position: absolute;
   height: 250px;
   width: 250px;
