--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ h2 {
 }
 
 #outer-circle {
-  background: #385a94;
+  background: #000000;
   border-radius: 50%;
   height: 500px;
   width: 500px;
